# arion

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  PLAN.md  README.md
apps/arion/: Cargo.toml
apps/arion-tui/: Cargo.toml
apps/arion-tui/src/: main.rs
apps/arion-web/: Cargo.toml
apps/arion-web/src/: main.rs
apps/arion/src/: main.rs
apps/thetis/: Cargo.toml
apps/thetis-tui/: Cargo.toml
apps/thetis-tui/src/: main.rs
apps/thetis/src/: main.rs
crates/arion-api/: Cargo.toml
crates/arion-api/src/: context.rs  error.rs  lib.rs  server.rs
crates/arion-api/src/routes/: bands.rs  instance.rs  memories.rs  metrics.rs  midi.rs  mod.rs  radio.rs  rigctld.rs  rx.rs  scripts.rs  telemetry.rs  tnf.rs
crates/arion-api/tests/: smoke.rs
crates/arion-app/: Cargo.toml
crates/arion-app/src/: lib.rs  protocol.rs
crates/arion-audio/: Cargo.toml
crates/arion-audio/examples/: audio_probe.rs  list_devices.rs
crates/arion-audio/src/: lib.rs
crates/arion-core/: Cargo.toml
crates/arion-core/examples/: rx_listen.rs
crates/arion-core/src/: digital.rs  lib.rs
crates/arion-core/src/digital/: aprs.rs  ax25.rs  baudot.rs  mod.rs  psk31.rs  rtty.rs  varicode.rs  wspr.rs
crates/arion-egui/: Cargo.toml
crates/arion-egui/src/: bandplan.rs  lib.rs  script_ui.rs
crates/arion-midi/: Cargo.toml
crates/arion-midi/src/: action.rs  device.rs  error.rs  lib.rs  listener.rs  mapping.rs  persist.rs
crates/arion-rigctld/: Cargo.toml
crates/arion-rigctld/src/: error.rs  lib.rs  protocol.rs  reply.rs  session.rs
crates/arion-rigctld/src/commands/: freq.rs  level.rs  misc.rs  mod.rs  mode.rs  ptt.rs  split.rs  unknown.rs  vfo.rs
crates/arion-script/: Cargo.toml
crates/arion-script/src/: ctx.rs  engine.rs  error.rs  help_data.rs  lib.rs  ui_tree.rs
crates/arion-script/src/modules/: help.rs  memory.rs  mod.rs  radio.rs  rx.rs  ui.rs  window.rs
crates/arion-settings/: Cargo.toml
crates/arion-settings/src/: lib.rs
crates/arion-tui/: Cargo.toml
crates/arion-tui/src/: lib.rs  waterfall.rs
crates/arion-web/: Cargo.toml
crates/arion-web/examples/: serve_hello.rs
crates/arion-web/src/: assets.rs  lib.rs  protocol.rs  spectrum.rs  webrtc.rs
crates/arion-web/web/: README.md
crates/ft8/: Cargo.toml
crates/ft8-sys/: Cargo.toml  build.rs  mingw_compat.h  shim.c
crates/ft8-sys/src/: lib.rs
crates/ft8/src/: error.rs  lib.rs
crates/hpsdr-net/: Cargo.toml
crates/hpsdr-net/examples/: rx_probe.rs
crates/hpsdr-net/src/: discovery.rs  lib.rs  mock.rs  session.rs
crates/hpsdr-net/tests/: mock_roundtrip.rs
crates/hpsdr-protocol/: Cargo.toml
crates/hpsdr-protocol/src/: control.rs  discovery.rs  lib.rs  metis.rs  sample.rs
crates/liquid/: Cargo.toml
crates/liquid-sys/: Cargo.toml  build.rs
crates/liquid-sys/src/: lib.rs
crates/liquid/src/: error.rs  lib.rs  modem.rs  msresamp.rs  nco.rs  symsync.rs
crates/thetis-app/: Cargo.toml
crates/thetis-app/scripts/: calibrate_smeter.rhai
crates/thetis-app/src/: lib.rs
crates/thetis-audio/: Cargo.toml
crates/thetis-audio/examples/: audio_probe.rs  list_devices.rs
crates/thetis-audio/src/: lib.rs
crates/thetis-core/: Cargo.toml
crates/thetis-core/examples/: rx_listen.rs
crates/thetis-core/src/: lib.rs
crates/thetis-egui/: Cargo.toml
crates/thetis-egui/src/: lib.rs
crates/thetis-script/: Cargo.toml
crates/thetis-script/src/: lib.rs
crates/thetis-settings/: Cargo.toml
crates/thetis-settings/src/: lib.rs
crates/thetis-tui/: Cargo.toml
crates/thetis-tui/src/: lib.rs
crates/thetis-ui/: Cargo.toml
crates/thetis-ui/src/: lib.rs
crates/wdsp/: Cargo.toml
crates/wdsp-sys/: Cargo.toml  build.rs
crates/wdsp-sys/patches/: 0001-eq-fix-eq_mults-declaration-mismatch.patch  0002-sbnr-rename-SpectralBleachParameters.patch  0003-rnnr-use-from-file-api.patch  README.md
crates/wdsp-sys/shim/: Windows.h  avrt.h  intrin.h  process.h  rnnoise.h  wdsp_nr_stubs.c  wdsp_posix.c  wdsp_posix.h
crates/wdsp-sys/shim-win/: Windows.h
crates/wdsp-sys/shim/nr-stub/specbleach/: specbleach_adenoiser.h
crates/wdsp-sys/src/: lib.rs
crates/wdsp/data/: wdspWisdom00
crates/wdsp/examples/: bench_wisdom.rs  gen_wisdom.rs
crates/wdsp/src/: lib.rs  wisdom.rs
crates/wsprd/: Cargo.toml
crates/wsprd-sys/: Cargo.toml  build.rs  shim.c
crates/wsprd-sys/src/: lib.rs
crates/wsprd/src/: lib.rs
docs/: API.md  ARCHITECTURE.md  DIGITAL-MODES.md  MIDI.md  RIGCTLD.md  SCRIPTING.md  openapi.yaml
docs/midi-presets/: beatstep.toml  x-touch-mini.toml
examples/scripts/: 01_basics.rhai  02_scan.rhai  03_custom_panel.rhai  04_macro_button.rhai  05_menu_extension.rhai  06_ui_complete.rhai
