[workspace]
resolver = "2"
members = [
    "crates/wdsp-sys",
    "crates/wdsp",
    "crates/hpsdr-protocol",
    "crates/hpsdr-net",
    "crates/arion-audio",
    "crates/arion-core",
    "crates/arion-settings",
    "crates/arion-app",
    "crates/arion-script",
    "crates/arion-rigctld",
    "crates/arion-midi",
    "crates/arion-egui",
    "crates/arion-tui",
    "crates/arion-web",
    "apps/arion",
    "apps/arion-tui",
    "apps/arion-web",
]

[workspace.package]
version = "0.0.2"
edition = "2021"
rust-version = "1.82"
license = "GPL-3.0-or-later"
repository = "https://github.com/jromang/arion"

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
tracing = "0.1"
directories = "6"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
arc-swap = "1"
rtrb = "0.3"
socket2 = { version = "0.6", features = ["all"] }
cpal = "0.17"
# eframe with wgpu as the renderer (Vulkan on Linux, Metal on macOS,
# DX12 on Windows). glow is explicitly disabled so we don't end up
# carrying a second backend we don't use.
#
# IMPORTANT: eframe's "wgpu" feature pulls wgpu in with only the `wgsl`
# cargo feature, which compiles *no* native backend. `arion-egui` adds
# a direct `wgpu = "29"` dep with default features to enable vulkan /
# metal / dx12 / gles per platform — Cargo unifies the feature sets so
# eframe ends up using a properly-configured wgpu.
#
# Version alignment: eframe 0.34 → wgpu 29 → knows about the Vulkan 1.4
# `VK_PRESENT_MODE_FIFO_LATEST_READY_EXT` enum that Mesa 26 advertises.
# wgpu 25 logs a warn every frame about the unrecognised value; the
# bump silences it at the source instead of filtering.
eframe = { version = "0.34", default-features = false, features = [
    "default_fonts",
    "wgpu",
    "wayland",
    "x11",
    "accesskit",
] }
egui = "0.34"
serde = { version = "1", features = ["derive"] }
toml = "0.9"
bytes = "1"
rhai = "1"
egui_code_editor = "0.2"
rfd = "0.15"
ratatui = "0.30"
crossterm = "0.29"

# Internal crates
wdsp-sys = { path = "crates/wdsp-sys" }
wdsp = { path = "crates/wdsp" }
hpsdr-protocol = { path = "crates/hpsdr-protocol" }
hpsdr-net = { path = "crates/hpsdr-net" }
arion-audio = { path = "crates/arion-audio" }
arion-core = { path = "crates/arion-core" }
arion-settings = { path = "crates/arion-settings" }
arion-app = { path = "crates/arion-app" }
arion-script = { path = "crates/arion-script" }
arion-rigctld = { path = "crates/arion-rigctld" }
arion-midi = { path = "crates/arion-midi" }
arion-egui = { path = "crates/arion-egui" }
arion-tui = { path = "crates/arion-tui" }
arion-web = { path = "crates/arion-web" }

[profile.release]
lto = "thin"
codegen-units = 1
debug = 1
