[package]
name = "arion-tui-bin"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Arion TUI binary — console SDR control via ratatui"

[[bin]]
name = "arion-tui"
path = "src/main.rs"

[dependencies]
arion-tui.workspace = true
arion-app.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
directories.workspace = true
