[package]
name = "thetis-tui-bin"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Thetis TUI binary — console SDR control via ratatui"

[[bin]]
name = "thetis-tui"
path = "src/main.rs"

[dependencies]
thetis-tui.workspace = true
thetis-app.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
directories.workspace = true
