[package]
name = "arion-api"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "REST / JSON HTTP API for controlling Arion"

[dependencies]
arion-app.workspace = true
arion-core.workspace = true
arion-midi.workspace = true
arc-swap.workspace = true
serde.workspace = true
serde_json = "1"
thiserror.workspace = true
tracing.workspace = true
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "macros", "time"] }
axum = { version = "0.8", features = ["macros"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[lib]
doctest = false
