[package]
name = "arion-rigctld"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Hamlib rigctld-compatible TCP server for Arion"

[dependencies]
arion-app.workspace = true
arion-core.workspace = true
thiserror.workspace = true
tracing.workspace = true

[lib]
doctest = false
