[package]
name = "arion-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "ratatui console frontend for Arion (headless-friendly)"

# No dependency on egui / eframe / wgpu. Builds on a headless
# server with no graphics libraries installed.

[dependencies]
arion-app.workspace = true
arion-core.workspace = true
arion-script.workspace = true
ratatui.workspace = true
crossterm.workspace = true
tracing.workspace = true
anyhow.workspace = true

[lib]
doctest = false
