[package]
name = "thetis-audio"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Cross-platform audio I/O (cpal-based) for Thetis"

[dependencies]
cpal.workspace = true
rtrb.workspace = true
thiserror.workspace = true
tracing.workspace = true
rubato = "0.16"

[dev-dependencies]
anyhow.workspace = true
tracing-subscriber = { workspace = true }

[[example]]
name = "audio_probe"
path = "examples/audio_probe.rs"
