[package]
name = "thetis-script"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Rhai scripting engine + bindings for Thetis"

[dependencies]
thetis-app.workspace = true
thetis-core.workspace = true
thetis-settings.workspace = true
rhai.workspace = true
tracing.workspace = true

[lib]
doctest = false
