[package]
name = "thetis-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "egui + wgpu application shell for Thetis"

[dependencies]
thetis-core.workspace = true
eframe.workspace = true
egui.workspace = true
anyhow.workspace = true
tracing.workspace = true
