[package]
name = "wdsp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Safe Rust wrapper around wdsp-sys"

[dependencies]
wdsp-sys.workspace = true
thiserror.workspace = true
serde.workspace = true
tracing.workspace = true
directories.workspace = true

[dev-dependencies]
tracing-subscriber.workspace = true
