[package]
name = "wsprd-sys"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "FFI to vendored wsprd (WSJT-X WSPR decoder). Skeleton only — see src/lib.rs for status."

[build-dependencies]
cc = "1.2"

[features]
default = []
# When the library API refactor + FFTW link strategy are in place,
# flip this on so cargo actually compiles the C decoder. Until
# then the crate is a source-vendor placeholder.
build-c = []
